v1.0.0/modules/schema/pages/class/DispatchInstReply.adoc
= `DispatchInstReply`
:toclevels: 4


+++Response from registered resource acknowledging receipt of dispatch instructions.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:DispatchInstReply`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`DispatchInstReply`*


== Slots



.Associated classes
[d2,svg,theme=4]
----
vars: {
  d2-config: {
    pad: 20
  }
}
DispatchInstReply {
  style {
    fill: "#fffbef"
    shadow: true
  }
}







RegisteredResource {
  style {
    fill: "#fffbef"
    shadow: true
  }
}



DiagramObject {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



InstanceSet {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



Name {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}



ChangeSetMember {
  style {
    fill: "#eccfcb"
    shadow: true
  }
}






DispatchInstReply -> RegisteredResource: RegisteredResource


DispatchInstReply -> DiagramObject: DiagramObjects


DispatchInstReply -> InstanceSet: InstanceSet


DispatchInstReply -> Name: Names


DispatchInstReply -> ChangeSetMember: PropertiesCIMDataObject


DispatchInstReply -> ChangeSetMember: TargetingCIMDataObject


legend: "" {
  style: {
    fill: transparent
    stroke: transparent
  }
  grid-rows: 3
  grid-columns: 2
  grid-gap: 10
  near: bottom-right
  iec61968_color: "" {
    style: {
      fill: "#d1e7c2"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61968_text: "IEC61968 (Enterprise)" {
    shape: text
  }
  iec61970_color: "" {
    style: {
      fill: "#eccfcb"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec61970_text: "IEC61970 (Grid)" {
    shape: text
  }
  iec62325_color: "" {
    style: {
      fill: "#fffbef"
      stroke: black
      stroke-width: 1
    }
    width: 10
    height: 10
  }
  iec62325_text: "IEC62325 (Market)" {
    shape: text
  }
}
----


[cols="3,1,3,6",width=100%]
|===
| Name | Cardinality | Type | Description

| <<RegisteredResource,`RegisteredResource`>>
| 1
| xref::class/RegisteredResource.adoc[`RegisteredResource`]
| n/a

| <<InstanceSet,`InstanceSet`>>
| 1
| xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++

| <<acceptMW,`acceptMW`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++The accepted mw amount by the responder. aka response mw.+++

| <<acceptStatus,`acceptStatus`>>
| 0..1
| xref::enumeration/DispatchResponseType.adoc[`DispatchResponseType`]
| +++The accept status submitted by the responder. enumeration type needs to be defined+++

| <<certificationName,`certificationName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The Subject DN is the X509 Certificate Subject DN. This is the essentially the certificate name presented by the client. In the case of ADS Certificates, this will be the user name. It may be from an API Client or the MP Client (GUI).

The Subject ID normally includes more than just the user name (Common Name), it can also contain information such as City, Company ID, etc.+++

| <<clearedMW,`clearedMW`>>
| 0..1
| xref::class/ActivePower.adoc[`ActivePower`]
| +++MW amount associated with instruction.  For 5 minute binding dispatches, this is the Goto MW or DOT+++

| <<instructionTime,`instructionTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++The target date/time for the received instruction.+++

| <<instructionType,`instructionType`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++instruction type:

commitment
out of sequence
dispatch+++

| <<passIndicator,`passIndicator`>>
| 0..1
| xref::enumeration/PassIndicatorType.adoc[`PassIndicatorType`]
| +++The type of run for the market clearing.+++

| <<receivedTime,`receivedTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++Timestamp indicating the time at which the instruction was received.+++

| <<startTime,`startTime`>>
| 0..1
| https://w3id.org/linkml/Date[`date`]
| +++start time+++

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++

| <<aliasName,`aliasName`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

| <<description,`description`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

| <<mRID,`mRID`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

| <<name,`name`>>
| 0..1
| https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++

| <<DiagramObjects,`DiagramObjects`>>
| 0..*
| xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++

| <<Names,`Names`>>
| 0..*
| xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..*
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
|===

'''


//[discrete]
[#acceptMW]
=== `acceptMW`
+++The accepted mw amount by the responder. aka response mw.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DispatchInstReply.acceptMW`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

//[discrete]
[#acceptStatus]
=== `acceptStatus`
+++The accept status submitted by the responder. enumeration type needs to be defined+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DispatchInstReply.acceptStatus`
| Cardinality
| 0..1
| Type
| xref::enumeration/DispatchResponseType.adoc[`DispatchResponseType`]


|===

//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#certificationName]
=== `certificationName`
+++The Subject DN is the X509 Certificate Subject DN. This is the essentially the certificate name presented by the client. In the case of ADS Certificates, this will be the user name. It may be from an API Client or the MP Client (GUI).

The Subject ID normally includes more than just the user name (Common Name), it can also contain information such as City, Company ID, etc.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DispatchInstReply.certificationName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#clearedMW]
=== `clearedMW`
+++MW amount associated with instruction.  For 5 minute binding dispatches, this is the Goto MW or DOT+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DispatchInstReply.clearedMW`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#instructionTime]
=== `instructionTime`
+++The target date/time for the received instruction.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DispatchInstReply.instructionTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#instructionType]
=== `instructionType`
+++instruction type:

commitment
out of sequence
dispatch+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DispatchInstReply.instructionType`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#passIndicator]
=== `passIndicator`
+++The type of run for the market clearing.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DispatchInstReply.passIndicator`
| Cardinality
| 0..1
| Type
| xref::enumeration/PassIndicatorType.adoc[`PassIndicatorType`]


|===

//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

//[discrete]
[#receivedTime]
=== `receivedTime`
+++Timestamp indicating the time at which the instruction was received.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DispatchInstReply.receivedTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#RegisteredResource]
=== `RegisteredResource`


[cols="h,4",width=65%]
|===
| URI
| `cim:DispatchInstReply.RegisteredResource`
| Cardinality
| 1
| Type
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

//[discrete]
[#startTime]
=== `startTime`
+++start time+++

[cols="h,4",width=65%]
|===
| URI
| `cim:DispatchInstReply.startTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++

[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===


