v1.1.0/modules/schema/pages/class/DispatchInstReply.adoc
= `DispatchInstReply`
:toclevels: 4


+++Response from registered resource acknowledging receipt of dispatch instructions.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:DispatchInstReply`


| CIM standard (perspective)
| IEC62325 (Market)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** *`DispatchInstReply`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<RegisteredResource,`RegisteredResource`>>
//| [[slots_table.RegisteredResource]]<<RegisteredResource,`RegisteredResource`>>
| 1 +
xref::class/RegisteredResource.adoc[`RegisteredResource`]
| _n/a_
| _n/a_

| <<acceptMW,`acceptMW`>>
//| [[slots_table.acceptMW]]<<acceptMW,`acceptMW`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++The accepted mw amount by the responder. aka response mw.+++
| _n/a_

| <<acceptStatus,`acceptStatus`>>
//| [[slots_table.acceptStatus]]<<acceptStatus,`acceptStatus`>>
| 0..1 +
xref::enumeration/DispatchResponseType.adoc[`DispatchResponseType`]
| +++The accept status submitted by the responder. enumeration type needs to be defined+++
| _n/a_

| <<certificationName,`certificationName`>>
//| [[slots_table.certificationName]]<<certificationName,`certificationName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The Subject DN is the X509 Certificate Subject DN. This is the essentially the certificate name presented by the client. In...+++
| _n/a_

| <<clearedMW,`clearedMW`>>
//| [[slots_table.clearedMW]]<<clearedMW,`clearedMW`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++MW amount associated with instruction.  For 5 minute binding dispatches, this is the Goto MW or DOT+++
| _n/a_

| <<instructionTime,`instructionTime`>>
//| [[slots_table.instructionTime]]<<instructionTime,`instructionTime`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++The target date/time for the received instruction.+++
| _n/a_

| <<instructionType,`instructionType`>>
//| [[slots_table.instructionType]]<<instructionType,`instructionType`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++instruction type:

commitment
out of sequence
dispatch+++
| _n/a_

| <<passIndicator,`passIndicator`>>
//| [[slots_table.passIndicator]]<<passIndicator,`passIndicator`>>
| 0..1 +
xref::enumeration/PassIndicatorType.adoc[`PassIndicatorType`]
| +++The type of run for the market clearing.+++
| _n/a_

| <<receivedTime,`receivedTime`>>
//| [[slots_table.receivedTime]]<<receivedTime,`receivedTime`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++Timestamp indicating the time at which the instruction was received.+++
| _n/a_

| <<startTime,`startTime`>>
//| [[slots_table.startTime]]<<startTime,`startTime`>>
| 0..1 +
https://w3id.org/linkml/Date[`date`]
| +++start time+++
| _n/a_

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#acceptMW]
=== `acceptMW`
+++The accepted mw amount by the responder. aka response mw.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DispatchInstReply.acceptMW`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

////
[.text-left]
--
<<slots_table.acceptMW,&#10548;>>
--
////


//[discrete]
[#acceptStatus]
=== `acceptStatus`
+++The accept status submitted by the responder. enumeration type needs to be defined+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DispatchInstReply.acceptStatus`
| Cardinality
| 0..1
| Type
| xref::enumeration/DispatchResponseType.adoc[`DispatchResponseType`]


|===

////
[.text-left]
--
<<slots_table.acceptStatus,&#10548;>>
--
////


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#certificationName]
=== `certificationName`
+++The Subject DN is the X509 Certificate Subject DN. This is the essentially the certificate name presented by the client. In the case of ADS Certificates, this will be the user name. It may be from an API Client or the MP Client (GUI).

The Subject ID normally includes more than just the user name (Common Name), it can also contain information such as City, Company ID, etc.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DispatchInstReply.certificationName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.certificationName,&#10548;>>
--
////


//[discrete]
[#clearedMW]
=== `clearedMW`
+++MW amount associated with instruction.  For 5 minute binding dispatches, this is the Goto MW or DOT+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DispatchInstReply.clearedMW`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

////
[.text-left]
--
<<slots_table.clearedMW,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#instructionTime]
=== `instructionTime`
+++The target date/time for the received instruction.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DispatchInstReply.instructionTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

////
[.text-left]
--
<<slots_table.instructionTime,&#10548;>>
--
////


//[discrete]
[#instructionType]
=== `instructionType`
+++instruction type:

commitment
out of sequence
dispatch+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DispatchInstReply.instructionType`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]


|===

////
[.text-left]
--
<<slots_table.instructionType,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#passIndicator]
=== `passIndicator`
+++The type of run for the market clearing.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DispatchInstReply.passIndicator`
| Cardinality
| 0..1
| Type
| xref::enumeration/PassIndicatorType.adoc[`PassIndicatorType`]


|===

////
[.text-left]
--
<<slots_table.passIndicator,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#receivedTime]
=== `receivedTime`
+++Timestamp indicating the time at which the instruction was received.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DispatchInstReply.receivedTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

////
[.text-left]
--
<<slots_table.receivedTime,&#10548;>>
--
////


//[discrete]
[#RegisteredResource]
=== `RegisteredResource`



[cols="h,4",width=65%]
|===
| URI
| `cim:DispatchInstReply.RegisteredResource`
| Cardinality
| 1
| Type
| xref::class/RegisteredResource.adoc[`RegisteredResource`]


|===

////
[.text-left]
--
<<slots_table.RegisteredResource,&#10548;>>
--
////


//[discrete]
[#startTime]
=== `startTime`
+++start time+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DispatchInstReply.startTime`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Date[`date`]


|===

////
[.text-left]
--
<<slots_table.startTime,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////





== Used by


[cols="1,1",width=65%]
|===
| Source class | Slot name



| xref::class/RegisteredResource.adoc[`RegisteredResource`] | xref::class/RegisteredResource.adoc#DispatchInstReply[`DispatchInstReply`]


|===

